--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,8 @@ ul {
 }
 
 .section .container {
-    padding-top: 60px;
-    padding-bottom: 70px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .section-title {
@@ -107,8 +107,8 @@ ul {
 }
 
 .btn {
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 20px;
+    font-weight: 600;
     padding: 12px 35px;
     background: var(--skin-color);
     color: white;
@@ -247,7 +247,7 @@ ul {
     border-bottom: 1px solid var(--bg-black-50);
 }
 
-.aside .nav li a.active {
+.aside .nav li a:hover {
     color: var(--skin-color);
 }
 
@@ -268,23 +268,22 @@ ul {
 }
 
 h3.hello {
-    font-size: 28px;
-    margin: 15px 0;
+    font-size: 35px;
+    margin-top: 80px;
 }
 
 h3.hello span {
-    font-family: 'Clicker Script', cursive;
     font-size: 30px;
     font-weight: 700;
     color: var(--skin-color);
 }
 
 h3.myprofession {
-    font-size: 30px;
-    margin: 15px 0;
+    font-size: 28px;
+    margin-bottom: 60px;
 }
 
-.typing {
+.p-typing {
     color: var(--skin-color);
 }
 
@@ -329,6 +328,8 @@ h3.myprofession {
     border-radius: 25px;
 }
 
+/* About */
+
 .about .about-content {
     flex: 0 0 100%;
     max-width: 100%;
@@ -368,9 +369,9 @@ h3.myprofession {
 }
 
 .about .about-content .personal-info .info-item p {
-    font-weight: 600;
+    font-weight: 700;
     padding: 10px 0;
-    font-size: 16px;
+    font-size: 20px;
     color: var(--text-black-900);
     border-bottom: 1px solid var(--bg-black-50);
 }
@@ -437,15 +438,14 @@ h3.myprofession {
     color: var(--text-black-900);
 }
 
-.about .about-content .education,
-.about .about-content .experience {
-    flex: 0 0 50%;
-    max-width: 50%;
+.about .about-content .education{
+    flex: 0 0 100%;
+    max-width: 100%;
     margin-top: 30;
 }
 
 .about .about-content h3.title {
-    font-size: 24px;
+    font-size: 30px;
     font-weight: 700;
     margin-bottom: 30px;
     color: var(--text-black-900);
@@ -488,7 +488,7 @@ h3.myprofession {
 .about .about-content .timeline .circle-dot {
     content: '';
     background-color: var(--skin-color);
-    height:15px;
+    height: 15px;
     width: 15px;
     border-radius: 50%;
     position: absolute;
@@ -497,11 +497,11 @@ h3.myprofession {
 }
 
 .about .about-content .timeline .timeline-date {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 400;
     margin-bottom: 10px;
     color: var(--text-black-700);
-    
+
 }
 
 .about .about-content .timeline .timeline-date .fa {
@@ -509,7 +509,7 @@ h3.myprofession {
 }
 
 .about .about-content .timeline .timeline-title {
-    font-size: 18px;
+    font-size: 22px;
     font-weight: 700;
     margin-bottom: 10px;
     text-transform: capitalize;
@@ -522,4 +522,235 @@ h3.myprofession {
     font-weight: 400;
     text-align: justify;
     color: var(--text-black-700);
+}
+
+/* Service */
+
+.service .container {
+    padding-bottom: 50px;
+}
+
+.service .service-item {
+    margin-bottom: 30px;
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.service .service-item .service-item-inner {
+    background-color: var(--bg-black-100);
+    border: 1px solid var(--bg-black-50);
+    border-radius: 15px;
+    padding: 30px 15px;
+    text-align: center;
+    transition: all 0.5s ease;
+}
+
+.service .service-item .service-item-inner:hover {
+    box-shadow: 0 0 15px rgb(48, 46, 77, 0.15);
+}
+
+.service .service-item .service-item-inner .icon {
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    margin: 0 auto 30px;
+    transition: all 0.5s ease;
+}
+
+.service .service-item .service-item-inner:hover .icon {
+    background: var(--skin-color);
+}
+
+.service .service-item .service-item-inner .icon .fa {
+    font-size: 50px;
+    line-height: 70px;
+    color: var(--skin-color);
+    transition: all 1s ease;
+}
+
+.service .service-item .service-item-inner:hover .icon .fa {
+    font-size: 40px;
+    color: white;
+}
+
+.service .service-item .service-item-inner h4 {
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 15px;
+    color: var(--text-black-900);
+    text-transform: capitalize;
+}
+
+.service .service-item .service-item-inner p {
+    font-size: 16px;
+    color: var(--text-black-700);
+    line-height: 20px;
+}
+
+/* Portfolio */
+.portfolio .container {
+    padding-bottom: 50px;
+}
+
+.portfolio .portfolio-heading {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 40px;
+}
+
+.portfolio .portfolio-heading h2 {
+    font-size: 30px;
+    font-weight: 600;
+    color: var(--text-black-700);
+}
+
+.portfolio .portfolio-item {
+    flex: 0 0 50%;
+    max-width: 50%;
+    margin-bottom: 30px;
+}
+
+.portfolio .portfolio-item-inner {
+    border: 5px solid var(--bg-black-100);
+    border-radius: 15px;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+.portfolio .portfolio-item-inner .portfolio-img img {
+    width: 100%;
+    display: block;
+}
+
+/* Contact */
+.contact-title {
+    font-size: 30px;
+    color: var(--skin-color);
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.contact-sub-title {
+    font-size: 20px;
+    color: var(--text-black-900);
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.contact .contact-info-item {
+    flex: 0 0 33.33%;
+    max-width: 33.33%;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.contact .contact-info-item .icon {
+    display: inline-block;
+}
+
+.contact .contact-info-item .icon .fa {
+    font-size: 20px;
+    color: var(--skin-color);
+}
+
+.contact .contact-info-item h4 {
+    font-size: 18px;
+    font-weight: 700;
+    color: var(--text-black-900);
+    text-transform: capitalize;
+    margin: 10px 0 10px;
+}
+
+.contact .contact-info-item p {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    color: var(--text-black-700);
+}
+
+.contact .contact-form {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.contact .contact-form .col-6 {
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+
+.contact .contact-form .col-12 {
+    flex: 0 0 100%;
+    max-width: 100%;
+}
+
+.contact .contact-form .form-item {
+    margin-bottom: 20px;
+}
+
+.contact .contact-form .form-item .form-control {
+    width: 100%;
+    height: 50px;
+    background: var(--bg-black-100);
+    border: 1px solid var(--bg-black-50);
+    border-radius: 20px;
+    padding: 10px 15px;
+    font-size: 16px;
+    color: var(--text-black-700);
+    transition: all 0.5s ease;
+}
+
+.contact .contact-form .form-item .form-control:focus {
+    box-shadow: 0 0 15px rgb(48, 46, 77, 0.15);
+}
+
+.contact .contact-form .form-item textarea.form-control {
+    height: 150px;
+}
+
+.contact .contact-form .btn {
+    height: 50px;
+    padding: 0 50px;
+}
+
+@media (max-width:1199px) {
+    .aside {
+        left: -270px;
+    }
+
+    .main-content {
+        padding-left: 0;
+    }
+
+    .about .about-content .personal-info .info-item p span {
+        display: block;
+        margin-left: 0;
+    }
+}
+
+@media (max-width:991px) {
+    .home .home-info {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+
+    .home .home-img {
+        display: none;
+    }
+
+    .contact .contact-info-item {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
+}
+
+@media (max-width:767px) {
+
+    .about .about-content .personal-info,
+    .about .about-content .skills,
+    .portfolio .portfolio-item,
+    .contact .contact-info-item,
+    .contact .contact-form .col-6 {
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
 }
