--- a/css/style.css
+++ b/css/style.css
@@ -107,9 +107,9 @@ ul {
 }
 
 .btn {
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 600;
-    padding: 12px 35px;
+    padding: 10px 20px;
     background: var(--skin-color);
     color: white;
     border-radius: 20px;
@@ -120,7 +120,7 @@ ul {
 }
 
 .btn:hover {
-    transform: scale(1.5);
+    transform: scale(1.05);
 }
 
 .shadow-dark {
@@ -239,7 +239,7 @@ ul {
 }
 
 .aside .nav li a {
-    font-size: 16px;
+    font-size: 22px;
     font-weight: 600;
     display: block;
     color: var(--text-black-900);
@@ -263,23 +263,24 @@ ul {
 }
 
 .home .home-info {
-    flex: 0 0 60%;
-    max-width: 60%;
+    flex: 0 0 100%;
+    max-width: 100%;
+    text-align: center;
 }
 
 h3.hello {
-    font-size: 35px;
+    font-size: 45px;
     margin-top: 80px;
 }
 
 h3.hello span {
-    font-size: 30px;
+    font-size: 40px;
     font-weight: 700;
     color: var(--skin-color);
 }
 
 h3.myprofession {
-    font-size: 28px;
+    font-size: 35px;
     margin-bottom: 60px;
 }
 
@@ -294,8 +295,8 @@ h3.myprofession {
 }
 
 .home .home-img {
-    flex: 0 0 40%;
-    max-width: 40%;
+    flex: 0 0 100%;
+    max-width: 100%;
     position: relative;
     text-align: center;
 }
@@ -305,8 +306,8 @@ h3.myprofession {
     position: absolute;
     height: 80px;
     width: 80px;
-    left: 10px;
-    top: -15px;
+    margin-left: -20px;
+    top: -20px;
     border-left: 10px solid var(--skin-color);
     border-top: 10px solid var(--skin-color);
 }
@@ -316,14 +317,14 @@ h3.myprofession {
     position: absolute;
     height: 80px;
     width: 80px;
-    right: 10px;
-    bottom: -10px;
+    margin-left: -60px;
+    bottom: -20px;
     border-right: 10px solid var(--skin-color);
     border-bottom: 10px solid var(--skin-color);
 }
 
 .home .home-img img {
-    height: 400px;
+    height: 350px;
     margin: auto;
     border-radius: 25px;
 }
@@ -438,7 +439,7 @@ h3.myprofession {
     color: var(--text-black-900);
 }
 
-.about .about-content .education{
+.about .about-content .education {
     flex: 0 0 100%;
     max-width: 100%;
     margin-top: 30;
@@ -707,11 +708,6 @@ h3.myprofession {
     height: 150px;
 }
 
-.contact .contact-form .btn {
-    height: 50px;
-    padding: 0 50px;
-}
-
 @media (max-width:1199px) {
     .aside {
         left: -270px;
@@ -728,13 +724,10 @@ h3.myprofession {
 }
 
 @media (max-width:991px) {
-    .home .home-info {
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
-
-    .home .home-img {
-        display: none;
+    .btn {
+        font-size: 20px;
+        font-weight: 600;
+        padding: 10px 20px;
     }
 
     .contact .contact-info-item {
