--- a/css/style.css
+++ b/css/style.css
@@ -169,8 +169,8 @@ ul {
     position: absolute;
     bottom: 0;
     left: 0;
-    border-left: 5px solid red;
-    border-bottom: 5px solid red;
+    border-left: 5px solid var(--skin-color);
+    border-bottom: 5px solid var(--skin-color);
 }
 
 .aside .logo a::after {
@@ -294,6 +294,20 @@ h3.myprofession {
     color: var(--text-black-700);
 }
 
+.home .btn-lang {
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.home .btn-lang .btn{
+    font-size: 18px;
+    margin: auto;
+    border-radius: 25px;
+}
+
 .home .home-img {
     flex: 0 0 100%;
     max-width: 100%;
@@ -359,14 +373,16 @@ h3.myprofession {
 }
 
 .about .about-content .personal-info {
-    flex: 0 0 60%;
-    max-width: 60%;
+    flex: 0 0 100%;
+    max-width: 100%;
     margin-top: 40px;
+    text-align: center;
 }
 
 .about .about-content .personal-info .info-item {
-    flex: 0 0 50%;
-    max-width: 50%;
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 10px;
 }
 
 .about .about-content .personal-info .info-item p {
@@ -385,7 +401,7 @@ h3.myprofession {
 }
 
 .about .about-content .personal-info .buttons {
-    margin-top: 30px;
+    margin: auto;
 }
 
 .about .about-content .personal-info .buttons .btn {
@@ -394,8 +410,8 @@ h3.myprofession {
 }
 
 .about .about-content .skills {
-    flex: 0 0 40%;
-    max-width: 40%;
+    flex: 0 0 100%;
+    max-width: 100%;
     margin-top: 40px;
 }
 
@@ -406,8 +422,8 @@ h3.myprofession {
 }
 
 .about .about-content .skills .skill-item h5 {
-    font-weight: 600;
-    font-size: 16px;
+    font-weight: 700;
+    font-size: 20px;
     line-height: 40px;
     text-transform: capitalize;
     color: var(--text-black-900);
@@ -442,7 +458,7 @@ h3.myprofession {
 .about .about-content .education {
     flex: 0 0 100%;
     max-width: 100%;
-    margin-top: 30;
+    margin-top: 40px;
 }
 
 .about .about-content h3.title {
@@ -724,6 +740,18 @@ h3.myprofession {
 }
 
 @media (max-width:991px) {
+    h3.hello {
+    font-size: 20px;
+    }
+
+    h3.hello span {
+    font-size: 16px;
+    }
+
+    h3.myprofession {
+    font-size: 18px;
+    }
+
     .btn {
         font-size: 20px;
         font-weight: 600;
@@ -738,8 +766,6 @@ h3.myprofession {
 
 @media (max-width:767px) {
 
-    .about .about-content .personal-info,
-    .about .about-content .skills,
     .portfolio .portfolio-item,
     .contact .contact-info-item,
     .contact .contact-form .col-6 {
